Fixed scrollbar stylesheet.
git-svn-id: http://yate.null.ro/svn/yate/trunk@4857 acf43c95-373e-0410-b603-e72c3f656dc1

--- a/share/skins/default/stylesheet.css
+++ b/share/skins/default/stylesheet.css
@@ -207,7 +207,7 @@ QSpinBox::down-arrow:disabled, QSpinBox::down-arrow:off { image: url(down_small_
 
 /* QTabWidget and QTabBar */
 
-QTabWidget::pane {      
+QTabWidget::pane {
   border: 1px solid #717fa0;
   background:  #ffffff;
 }
@@ -308,6 +308,8 @@ QScrollBar::sub-line {
   subcontrol-origin: margin;
   background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffffff, stop: 1 #f6e8e8);
 }
+QScrollBar::add-page { border: 0px; }
+QScrollBar::sub-page { border: 0px; }
 QScrollBar::handle:vertical { border-left: 0px; border-right: 0px; }
 QScrollBar::handle:horizontal { border-top: 0px; border-bottom: 0px; }
 QScrollBar::add-line:vertical { subcontrol-position: bottom; image: url(scroll_down.png); height: 14px; }
